--- a/app/Resources/views/course/edit_course_info_panel.html.twig
+++ b/app/Resources/views/course/edit_course_info_panel.html.twig
@@ -25,7 +25,10 @@
             </dt>
             <dd>
                 {% if courseInfo.publicationDate is not empty %}
-                    <span class="badge badge-pill badge-success">Publié</span>
+                    <span class="badge badge-pill badge-success">Publié</span><br>
+                    <a target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=fUQgvFKJzUqD5F1otezkb78RiPD675VPioqx3pigUrJUNUtBRUlZU1lYMUw3NDZGQVEzU1hQNzJaSC4u">
+                        <small>Formulaire prime Syllabus</small>
+                    </a>
                 {% else %}
                     <span class="badge badge-pill badge-danger">Non publié</span>
                 {% endif %}
