--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -370,9 +370,9 @@
 
         $('#infos_level').click(function(){
             var message = '<ul>' +
-                '<li><strong>Débutant</strong> : Ce cours demande peu ou pas de connaissance préaables.</li>' +
-                '<li><strong>Intermédiaire</strong> : Ce cours demande quelques connaissance préaables.</li>' +
-                '<li><strong>Avancé</strong> : Ce cours demande d\'importantes connaissance préaables.</li>' +
+                '<li><strong>Débutant</strong> : Ce cours demande peu ou pas de connaissances préaables.</li>' +
+                '<li><strong>Intermédiaire</strong> : Ce cours demande quelques connaissances préalables.</li>' +
+                '<li><strong>Avancé</strong> : Ce cours demande d\'importantes connaissances préalables.</li>' +
             '</ul>';
             bootbox.dialog({
                 message: message,
