--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -316,7 +316,7 @@
             {% for section in course.courseSections %}
                 <div id="activities_sections" class="mt-4 p-2 bg-light">
                     <h5 class="text-body font-weight-bold">{{section.title}}</h5>
-                    <div class="text-dark p-2">
+                    <div class="section-description text-dark p-2">
                         {{section.description|raw}}
                     </div>
                     {% if section.courseSectionActivities|length > 0 %}
