--- a/app/Resources/views/course/edit_course_info_panel.html.twig
+++ b/app/Resources/views/course/edit_course_info_panel.html.twig
@@ -102,7 +102,7 @@
                     id="adviceButton"
                     type="button">
                 <i class="fas fa-comment-dots"></i>
-                Demander un avis
+                Demander un avis (ingénieur pédagogique)
             </button>
             <a class="btn btn-outline-secondary"
                href="{{ path('view_student', {'id': courseInfo.id}) }}"
