--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -15,12 +15,13 @@
 
 {% block main %}
     {% if course == null %}
-        <div class="alert alert-danger" role="alert">
-            Le syllabus demandé n'a pas été retrouvé.
+        <div class="alert alert-danger text-center" role="alert">
+            <p>Le syllabus demandé n'a pas été retrouvé.</p>
         </div>
     {% elseif course.publicationDate == null and coursePermissionHelper.hasPermission(course, app.user, constant('AppBundle\\Constant\\Permission::WRITE')) != true %}
-        <div class="alert alert-warning" role="alert">
-            Le syllabus demandé n'est pas encore publié.
+        <div class="alert alert-warning text-center" role="alert">
+            <p>Le syllabus demandé n'est pas encore publié.</p>
+            <p>Si vous êtes un enseignant nouvellement inscrit sur ce cours vous aurez la possibilité de modifier le Syllabus d'ici 24h.</p>
         </div>
     {% else %}
         {% set parent = course.course.parents[0] %}
