--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -2,9 +2,7 @@
 
 {% block main %}
 
-    <h3>
-        Matériel et ressources
-    </h3>
+
 
     {% form_theme form with [
         'form/equipments_field.html.twig',
@@ -12,6 +10,20 @@
     ] %}
 
     {{ form_start(form) }}
+
+    <div class="d-flex flex-row justify-content-between">
+        <div>
+            <h3>
+                Matériel et ressources
+            </h3>
+        </div>
+        <div>
+            <button class="btn btn-outline-primary submit" type="submit">
+                <i class="fas fa-save"></i>
+                Enregistrer
+            </button>
+        </div>
+    </div>
 
     <div class="row m-1">
         <div class="col border mr-1">
