--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -2,9 +2,7 @@
 
 {% block main %}
 
-    <h3>
-        Objectifs du cours
-    </h3>
+
 
     {% form_theme form with [
     'form/achievements_field.html.twig',
@@ -13,6 +11,21 @@
     ] %}
 
     {{ form_start(form) }}
+
+    <div class="d-flex flex-row justify-content-between">
+        <div>
+            <h3>
+                Objectifs du cours
+            </h3>
+        </div>
+        <div>
+            <button class="btn btn-outline-primary submit" type="submit">
+                <i class="fas fa-save"></i>
+                Enregistrer
+            </button>
+        </div>
+    </div>
+
     {{ form_errors(form) }}
     <div class="row mt-3 mb-5">
         <div class="col">
