--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -71,10 +71,10 @@
         Capacités visées / acquis d'apprentissage
         <img id="infos_acquis" src="{{ asset('images/info_32.png') }}" style="cursor: pointer;">
     </h5>
-    <a href="https://lms.unice.fr/enrol/index.php?id=891"
+    <a href="https://lms.univ-cotedazur.fr/course/view.php?id=22948"
        class="btn btn-outline-info btn-sm btn-block"
        target="_blank">
-        Cours dédié à l'« Approche par Compétences » (clé d'inscription = APC)
+        Cours dédié à l'« Approche par Compétences » (auto inscription)
     </a>
     <div class="border border-primary rounded p-4 my-3 mx-1">
         <h6>À la fin de ce cours, l'étudiant devrait être capable de…</h6>
