--- a/app/Resources/views/course/edit_course_info_panel.html.twig
+++ b/app/Resources/views/course/edit_course_info_panel.html.twig
@@ -1,4 +1,9 @@
-
+<div class="d-flex flex-row justify-content-end">
+    <a class="btn btn-block btn-primary" href="https://lms.univ-cotedazur.fr/course/view.php?id=11745&section=0" target="_blank">
+        <i class="fas fa-question-circle"></i>
+        Besoin d'aide pour remplir le Sylabus ?
+    </a>
+</div>
 <div class="row mt-3">
     <div class="col">
         <dl>
@@ -88,15 +93,15 @@
 </div>
 <div class="row mt-3">
     <div class="col">
-    {% if courseInfo.publisher is empty or courseInfo.publicationDate is null %}
-        <button class="btn btn-outline-success btn-block shadow"
-                id="publishButton"
-                type="button"
-                {% if not courseInfoHelper.canBePublished(courseInfo) %} disabled {% endif %}>
-            <i class="fas fa-eye"></i>
-            Publier
-        </button>
-    {% endif %}
+        {% if courseInfo.publisher is empty or courseInfo.publicationDate is null %}
+            <button class="btn btn-outline-success btn-block shadow"
+                    id="publishButton"
+                    type="button"
+                    {% if not courseInfoHelper.canBePublished(courseInfo) %} disabled {% endif %}>
+                <i class="fas fa-eye"></i>
+                Publier
+            </button>
+        {% endif %}
         <div class="btn-group btn-block shadow" role="group">
             <button class="btn btn-outline-secondary"
                     id="adviceButton"
